# CuClarabel

./: CMakeLists.txt  Makefile
src/: Clarabel.cpp  Clarabel.hpp  Clarabel.jl  data_updating.jl  kktsystem.hpp  kktsystem.jl  kktsystem_gpu.hpp  kktsystem_gpu.jl  precompile.jl  settings.hpp  solver.cpp  solver.jl  types.jl
src/MOI_wrapper/: MOI_extensions.jl  MOI_wrapper.jl
src/cones/: compositecone_type.jl  cone_api.jl  cone_dispatch.jl  cone_types.jl  coneops_compositecone.jl
src/gpucones/: augment_socp.hpp  augment_socp.jl  compositecone_type_gpu.hpp  compositecone_type_gpu.jl  coneops_compositecone_gpu.cpp  coneops_compositecone_gpu.hpp  coneops_compositecone_gpu.jl  coneops_expcone_gpu.hpp  coneops_expcone_gpu.jl  coneops_nncone_gpu.jl  coneops_nonsymmetric_common_gpu.jl  coneops_powcone_gpu.hpp  coneops_powcone_gpu.jl  coneops_psdtrianglecone_gpu.cpp  coneops_psdtrianglecone_gpu.hpp  coneops_psdtrianglecone_gpu.jl  coneops_socone_gpu.hpp  coneops_socone_gpu.jl  coneops_zerocone_gpu.jl  mathutilGPU.jl
src/kktsolvers/: kktsolver_directldl_gpu.hpp
src/kktsolvers/gpu/: directgpu_datamaps.hpp  directgpu_kkt_assembly.hpp  directldl_cudss.hpp  directldl_cudss.jl  directldl_mixed_cudss.hpp  gpu_defaults.hpp  gpu_defaults.jl  includes.hpp
src/utils/: csc_assembly_gpu.jl  mathutils.jl  mathutils_gpu.jl
test/: test_demo.cpp
test/OptTests/: basic_socp.cpp  linear_solvers.cpp
